style.css
html{
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;

}
 body{
 width: 100%;
 height: 100%;
 background-color: #f9f9f9;
 margin: 0px;
 padding: 0px;
 overflow-x: hidden;

}

.header {
  margin-top: 0px;
  margin-right: 0px;
  padding-top: 0px;
}
#header {
  background-image: url("./images/header.jpeg");
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size:cover;
  background-attachment: fixed;
  margin-top: 0px;
  margin-right: 0px;
}

#name {
margin-top: 0px;
padding-top: 38vh;
padding-left: 5vh;
font-size: 4em;
color: white;
text-shadow: 1px 1px 1px black;
}

#fontawesome{
  color: white;
  padding-left: 8vh;
  font-size: 3.2em;
  text-shadow: 1px 1px 1px black;
}
#fontLink{
  color: white;
}

#Description {
  color: white;
  padding-left: 8vh;
  font-size: 1.6em;
  text-shadow: 1px 1px 1px black;
  font-family: 'Roboto', sans-serif;
}
#about{
  margin-top: 6em;
  text-align: center;
  align-items: center;

}
#aboutText{
  margin-top: 5%;
  vertical-align: middle;
  margin-left: 4em;
  margin-right: 4em;
}

#aboutTitle {
  text-align: middle;
  color: black;
  font-family: 'Poppins', sans-serif;
  font-size: 2.2em;
  font-weight: bold;
}

#aboutBio {
 text-align:justify;
 color: #707070;
 font-family: 'Poppins', sans-serif;
 font-size: 1.5em;
}

#headshot {
  max-width: 23.5em;
  align-self: center;
  text-align: center;
  width: 100%;
}


#contact{
background-image: linear-gradient(to right, #42f474, #41aff4);
width: 100%;
max-width: 14em;
margin-top: 5%;
border-radius: 20px;
text-align: center;
}

#button{
color: white;
font-size: 1.7em;
font-family: 'Poppins', sans-serif;
}

#concerts {
text-align: center;
margin-top: 7em;
}

#concertsTitle{
  text-align: center;
  color: black;
  font-family: 'Poppins', sans-serif;
 font-size:300%;
 font-weight: bold;
}

responsiveCal {
position: relative;
padding-bottom: 75%;
height: 100%;
overflow: hidden;
}

.responsiveCal iframe {
position: relative;
top:0;
left: 0;
width: 72vw;
height: 42em;
}

#myWork{
  background-color: #212223;
  height: auto;
  margin-top:6%;
}

#workheader{
  margin-top: 4%;
  color: white;
  font-family: 'Poppins', sans-serif;
  font-size: 350%;
  font-weight: bold;
  text-align: center;

}

#soundcloud{
  background-color: #f47922;
  color: black;
  font-weight: bold;
  font-family: 'Poppins', sans-serif;
  font-size: 150%;
  margin-bottom: 1%;
  text-align: center;
  text-decoration: none;

}


#videos{
text-align: center;
}

responsiveVideo {
position:static;
overflow: hidden;
align-content: center;
max-width: 10vw;
}

.responsiveVideo iframe {
align-self: center;
padding-bottom: 2%;
top:0;
left: 0;
width: 400px;
height: 315px;
}

#card{
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: auto;
  width: 38vh;
  background-color: white;
  text-align: center;
  box-shadow: 1px 1px 10px #888888;
  margin-bottom: 10%;
}
#song{
  height: 38vh;
}
#SongName{
  font-family: 'Poppins', sans-serif;
  font-size: 220%;
  color: gray;
  padding-bottom: 15px;
  font-weight: bold;
}

#contactPage{
  height: auto;
  width: 50vw;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#contactTitle {
  font-family: 'Poppins', sans-serif;
  font-weight: bold;
  text-align: center;
  margin-top: 5%;
  font-size: 300%;
}

#contct-form {
  text-align: center;

}

#formLabel {
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    vertical-align: top;
   text-align: center;
   line-height: 100%;
   font-size: 1.1em;
}
#email {
  font-size: 90%;
}

#sociallinks{
  margin-right: 20vh;
  margin-left: 20vh;
  text-align: center;
  font-size: 13vh;
}

#bottomliner {
  background-color: #212223;
  font-family: 'Poppins', sans-serif;
  width: auto;
  height: 25px;
  text-align: center;
  align-items: center;
}

